--- a/RecycletoInventory/RecycletoInventory.csproj
+++ b/RecycletoInventory/RecycletoInventory.csproj
@@ -62,6 +62,7 @@
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Planet Crafter\Planet Crafter_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
